--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -5,6 +5,7 @@
   --primary-color-hover: #2F959C
   --secondary-color: #3EA2A9
   --secondary-color-15: #E2F1F2
+  --secondary-color-33: #BDDEE2
   --lightblue: #BEFCFF
   --aqua-transparent: rgba(1, 149, 158, .60)
   --green: #33B300
@@ -17,6 +18,7 @@
   --yellow: #FFC400
   --black-color: #565656
   --white: #ffffff
+  --softgray: #F1F5F9
   --gris: #f0f0f0
   --border-input-color: #D1D5DB
   --border-input-color-graygreen: #D9E9EA
