--- a/sass/_block-and-cards.sass
+++ b/sass/_block-and-cards.sass
@@ -9,6 +9,53 @@
     justify-content: center
     flex-wrap: wrap
     gap: 15px
+    &.theme-featuredlist
+      flex-wrap: nowrap
+      @include maxTablet
+        flex-wrap: wrap 
+      .block-and-cards-item
+        width: 100%
+        max-width: unset
+        box-shadow: 0px 0px 20px var(--secondary-color)
+        position: relative
+        top: 0
+        transition: all .1s linear
+        &:hover
+          top: -5px
+        @include maxTablet
+          max-width: 500px
+    &.theme-longlist
+      flex-wrap: nowrap
+      @include maxDesktopSmall
+        flex-wrap: wrap
+      .block-and-cards-item
+        padding: 20px
+        @include maxDesktopSmall
+          width: 25%
+        @include maxTabletPortrait
+          width: 35%
+        @include maxMobile
+          width: 40%
+        @include maxMobileLandscape
+          width: 45%
+          max-width: unset
+        @media (max-width: 330px)
+          width: 100%
+        .card-description
+          font-size: 14px
+          line-height: 1.5
+          @include maxMobile
+            font-size: 13px
+          @include maxMobileLandscape
+            font-size: 15px
+          &.info
+            @include maxMobileLandscape
+              display: none
+        .card-title
+          @include maxMobile
+            font-size: 14px
+        .btn
+          height: auto
   
   &-item
     width: 100%
@@ -91,3 +138,18 @@
       text-align: center
       .card-title
         color: var(--lightblue)
+  &.theme-gray
+    background-color: var(--softgray)
+    .card-title
+      color: var(--lightblue)
+    .block-and-cards-copys
+      width: calc(100% - 60px)
+      @include maxMobilePortrait
+        width: 100%
+        padding: 20px 0 0!important 
+    .block-and-cards-item
+      display: flex
+      margin-bottom: 15px
+      @include maxMobilePortrait
+        flex-wrap: wrap
+        flex-flow: column
