--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -7,6 +7,7 @@
   --secondary-color-15: #E2F1F2
   --secondary-color-33: #BDDEE2
   --lightblue: #BEFCFF
+  --lightblue-25: #EFFEFF
   --aqua-transparent: rgba(1, 149, 158, .60)
   --green: #33B300
   --lightred: #FF383C
@@ -31,7 +32,8 @@
   color: var(--black-color)
 .bg-black
   background-color: var(--black-color)
-
+.bg-lightblue
+  background-color: var(--lightblue-25)
 .btn-danger
   background-color: var(--primary-color)
   border-color: var(--primary-color)
