--- a/sass/_services-block.sass
+++ b/sass/_services-block.sass
@@ -45,6 +45,8 @@
     @include flexCenter
     border-radius: 100px
     button
+      background: transparent
+      background-color: transparent
       border: 0
       border-radius: 100px
       display: block
