--- a/sass/mainstyle.scss
+++ b/sass/mainstyle.scss
@@ -18,6 +18,8 @@
 @use '_variables.sass' as *;
 @use '_why-amalga.sass' as *;
 @use '_asfeatured.sass' as *;
+@use '_block-whynearshore.sass' as *;
+@use '_datanumbers.sass' as *;
 
 
 // homepage
