--- a/sass/_asfeatured.sass
+++ b/sass/_asfeatured.sass
@@ -1,7 +1,7 @@
 @use './variables' as *
 
 .asfeatured
-  padding: 80px 0
+  padding: 80px 0 40px
   background-color: var(--softgray)
   h2
     color: var(--primary-color)
