--- a/sass/_block-whynearshore.sass
+++ b/sass/_block-whynearshore.sass
@@ -16,6 +16,8 @@
       font-size: 18px
       text-transform: uppercase
       margin-bottom: 5px
+    p
+      margin: 25px 0
   &-item
     padding-bottom: 30px
     img
@@ -42,3 +44,63 @@
     box-shadow: 0px 0px 20px rgba(62, 162, 169, 0.5)
     border-radius: 5px
     margin-top: 25px
+
+  &-timeline
+    position: relative
+    .num-step
+      position: relative
+      &.lastnum
+        &::before
+          display: none
+      &::before
+        content: ""
+        position: absolute
+        top: 0
+        left: 50%
+        width: 1px
+        height: 140px
+        background-color: white
+        @media (max-width: 767px)
+          display: none
+    img
+      position: relative
+      z-index: 2
+      display: block
+      margin: 0 auto
+      @media (max-width: 767px)
+        margin: 0 0 20px      
+
+  &.theme-timeline
+    background-color: var(--secondary-color)
+    .block-whynearshore-item,
+    .block-whynearshore-data
+      width: 100%
+      max-width: 550px
+      margin: 0 auto
+    .block-whynearshore-data
+      @media (max-width: 767px)
+        margin-top: 50px
+    .block-whynearshore-title
+      padding-bottom: 0
+      h3
+        color: var(--lightblue)
+      h3, p
+        font-weight: 400
+      h2, p
+        color: var(--white)
+    .block-whynearshore-featuredcopy
+      border-top: 1px solid var(--primary-color)
+      border-radius: 0
+      margin-top: 45px
+      padding: 30px 0 0
+      font-size: 16px
+      color: var(--lightblue)
+    .block-whynearshore-item
+      p
+        color: var(--white)
+        font-weight: 300
+        font-size: 16px
+        strong
+          font-weight: 600
+          display: block
+          font-size: 20px
